--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "require": {
         "php": ">=5.5",
         "guzzlehttp/guzzle": "~6.0",
-        "vlucas/phpdotenv": "^2.2"
+        "vlucas/phpdotenv": "^2.2",
+        "satooshi/php-coveralls": "^1.0"
     },
     "require-dev":{
         "phpunit/phpunit": "^4.8"
