--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,29 @@
-# .travis.yml
-language: php
+#language: php
+
 php:
   - 5.5
-  - 5.4
-  - 5.3
+  - 5.6
+  - 7.0
+  - hhvm
+
+sudo: false
 
 matrix:
   allow_failures:
-    - php: 5.5
+    - php: 7.0
+    - php: hhvm
+before_install:
+  - composer install --dev
 
 install:
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install --dev --no-interaction
 script:
   - mkdir -p build/logs
-  - php vendor/bin/phpunit -c phpunit.xml.dist
+  - php vendor/bin/phpunit -c phpunit.xml
+  - ./vendor/bin/phpunit --coverage-clover ./tests/logs/clover.xml
 
+after_script:
+  - php vendor/bin/coveralls -v
 after_success:
-  - travis_retry php vendor/bin/coveralls
-  # or enable logging
-  - travis_retry php vendor/bin/coveralls -v
+  - travis_retry php vendor/bin/coverall
