--- a/circle.yml
+++ b/circle.yml
@@ -12,5 +12,9 @@ dependencies:
 ## Customize test commands
 test:
   override:
-    - phpunit -c phpunit.xml.dist
     - phpunit --coverage-clover ./build/logs/clover.xml
+
+  test:
+  override:
+    - mkdir -p $CIRCLE_TEST_REPORTS/phpunit
+    - phpunit --log-junit $CIRCLE_TEST_REPORTS/phpunit/junit.xml tests
