--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,23 @@
-#language: php
-
+language: php
 php:
-  - 5.5
   - 5.6
   - 7.0
   - hhvm
-
 sudo: false
-
 matrix:
   allow_failures:
     - php: 7.0
     - php: hhvm
-
 install:
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install --dev --no-interaction
+  - composer require satooshi/php-coveralls
+
 script:
   - mkdir -p build/logs
   - php vendor/bin/phpunit -c phpunit.xml
-  - ./vendor/bin/phpunit --coverage-clover ./tests/logs/clover.xml
 
-after_script:
-  - php vendor/bin/coveralls -v
 after_success:
-  - travis_retry php vendor/bin/coverall
+    - travis_retry php vendor/bin/coveralls
+    # or enable logging
+    - travis_retry php vendor/bin/coveralls -v
