Modified file configuration

--- a/circle.yml
+++ b/circle.yml
@@ -17,4 +17,4 @@ test:
   test:
   override:
     - mkdir -p $CIRCLE_TEST_REPORTS/phpunit
-    - phpunit --log-junit $CIRCLE_TEST_REPORTS/phpunit/junit.xml tests
+    - phpunit --log-junit $CIRCLE_TEST_REPORTS/phpunit/junit.xml test
