--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,2 +1,8 @@
 coverage_clover: build/logs/clover.xml
 repo_token: 8aWSg7oTGGqOzG1AZHspvQjTNKxPwaHFT
+
+service_name: travis-ci # travis-ci or travis-pro
+
+# for php-coveralls
+coverage_clover: build/logs/clover.xml
+json_path: build/logs/coveralls-upload.json
