--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,24 @@
 language: php
+
 php:
+  - 5.5
   - 5.6
   - 7.0
   - hhvm
-sudo: false
+
 matrix:
-  allow_failures:
-    - php: 7.0
-    - php: hhvm
-install:
-  - composer require satooshi/php-coveralls
+    allow_failures:
+        - php: hhvm
+
+install: travis_retry composer install --no-interaction --prefer-source
 
 script:
   - mkdir -p build/logs
-  - php vendor/bin/phpunit -c phpunit.xml
+  - php vendor/bin/phpunit -c phpunit.xml.dist
+  - phpunit --coverage-text --coverage-clover=coverage.clover
+  - phpunit --coverage-clover build/logs/clover.xml
 
-after_success:
-    - travis_retry php vendor/bin/coveralls
-    # or enable logging
-    - travis_retry php vendor/bin/coveralls -v
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - travis_retry php vendor/bin/coveralls -v
