--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "laztopaz/open-source-evangelist-status",
     "description": "This package aims to provide an analysis based on the number of open source projects an individual possess on Github. A comprehensive README is needed.",
     "license": "MIT",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Temitope Olotin",
